--- a/src/app/components/bio/bio.component.html
+++ b/src/app/components/bio/bio.component.html
@@ -1,13 +1,10 @@
-<div class="selectionColumn">
-  <div *ngFor="let character of cast" class="selector" (click)="select(character)">
-    {{character.name}}
+<div>
+  <div *ngIf="selected">
+    {{selected.name}}
+    {{selected.height}}
+    {{selected.description}}
+    {{selected.powers}}
+    {{selected.weight}}
   </div>
-</div>
-
-<div *ngIf="selected">
-  {{selected.name}}
-  {{selected.height}}
-  {{selected.description}}
-  {{selected.powers}}
-  {{selected.weight}}
+  <img class='portrait' src="{{selected.portraitUrl}}">
 </div>
