Added characters to gallery.

--- a/src/app/components/bio/bio.component.html
+++ b/src/app/components/bio/bio.component.html
@@ -1,10 +1,10 @@
 <div>
   <div *ngIf="selected">
-    {{selected.name}}
-    {{selected.height}}
-    {{selected.description}}
-    {{selected.powers}}
-    {{selected.weight}}
+    {{selected.name}}<br>
+    height {{selected.height}}<br>
+    description {{selected.description}}<br>
+    powers {{selected.powers}}<br>
+    weight {{selected.weight}}
   </div>
   <img class='portrait' src="{{selected.portraitUrl}}">
 </div>
