Added descriptions to bios. Reduced size of portraits

--- a/src/app/components/bio/bio.component.html
+++ b/src/app/components/bio/bio.component.html
@@ -2,9 +2,9 @@
   <div *ngIf="selected">
     {{selected.name}}<br>
     height {{selected.height}}<br>
-    description {{selected.description}}<br>
     powers {{selected.powers}}<br>
     weight {{selected.weight}}
   </div>
   <img class='portrait' src="{{selected.portraitUrl}}">
+  <p>{{selected.description}}</p>
 </div>
