Footer sticks to bottom now. Scrolling is allowed to scroll through overlap at the bottom.

--- a/src/app/components/bio/bio.component.html
+++ b/src/app/components/bio/bio.component.html
@@ -6,5 +6,5 @@
     weight {{selected.weight}}
   </div>
   <img class='portrait' src="{{selected.portraitUrl}}">
-  <p>{{selected.description}}</p>
+  <p class="description">{{selected.description}}</p>
 </div>
