--- a/src/app/components/bio/bio.component.css
+++ b/src/app/components/bio/bio.component.css
@@ -5,13 +5,41 @@
   font-size: 2em;
 }
 
+.container {
+  white-space: nowrap;
+  position: relative;
+  top: 60px;
+}
+
+.frame {
+  display: inline-block;
+  width: auto;
+  vertical-align: top;
+}
+
 .portrait {
-  border-radius: 5px;
-  width: 700px;
-  height: auto;
+  width: auto;
+  height: 800px;
+}
+
+.info {
+  height: 800px;
+  width: 800px;
+  background-color: #460001;
+  display: inline-block;
+  vertical-align: top;
+  align-content: center;
+  color: white;
+  padding: 0 20px;
+  font-size: 1.25em;
+  white-space: normal;
+}
+
+.charName {
+  font-size: 2.2em;
+  text-align: center;
 }
 
 .description {
-  font-size: 1.25em;
-  margin-bottom: 50px;
+  margin-top: 15px;
 }
