--- a/src/app/components/bio/bio.component.css
+++ b/src/app/components/bio/bio.component.css
@@ -1,30 +1,27 @@
-.selector {
-  padding-top: 1px;
-  background-color: rgba(30,30,30,0.8);
-  margin: 20px 0;
-  font-size: 2em;
-}
-
 .container {
   white-space: nowrap;
   position: relative;
   top: 60px;
+  width: 100%;
+  height: 100%
 }
 
 .frame {
   display: inline-block;
   width: auto;
+  min-width: 300px;
+  height: 100%;
   vertical-align: top;
 }
 
 .portrait {
-  width: auto;
-  height: 800px;
+  max-width: 100%;
+  max-height: 100%;
 }
 
 .info {
-  height: 800px;
-  width: 800px;
+  height: 100%;
+  width: 60%;
   background-color: #460001;
   display: inline-block;
   vertical-align: top;
@@ -33,6 +30,11 @@
   padding: 0 20px;
   font-size: 1.25em;
   white-space: normal;
+  overflow: scroll;
+}
+
+.info::-webkit-scrollbar {
+  display: none;
 }
 
 .charName {
@@ -40,6 +42,6 @@
   text-align: center;
 }
 
-.description {
+.spoiler {
   margin-top: 15px;
 }
